--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "backend":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "minho",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "mongoose": "^8.4.4"
+    "mongoose": "^5.13.17"
+  },
+  "devDependencies": {
+    "nodemin": "^1.0.1",
+    "nodemon": "^3.1.4"
   }
 }
